style.css
body {
    max-width: 700px;
    margin: 40px auto;
    padding: 0 20px;
    font-family: "Times New Roman", Times, serif;
    font-size: 16px;
    line-height: 1.5;
    color: #000;
    background: #fff;
}

a {
    color: #0000ee;
}

a:visited {
    color: #551a8b;
}

h1 {
    font-size: 1.4em;
    font-weight: bold;
}

h3 {
    font-size: 1.1em;
    margin-top: 0.5em;
}

ul {
    list-style: none;
    padding-left: 0;
    margin-top: 0.2em;
}

li {
    margin-bottom: 0.4em;
}

p {
    margin: 0;
}

